[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "incident_forge"
version = "1.0.0"
description = "IncidentForge OpenEnv RL simulator"
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "incident_forge.server.app:main"
