[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "incident-forge"
version = "1.0.0"
description = "Production Incident Response RL Environment for OpenEnv"
readme = "../README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IncidentForge Team"},
]
keywords = ["openenv", "reinforcement-learning", "incident-response", "SRE", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/incident-forge/incident-forge"
Documentation = "https://github.com/incident-forge/incident-forge#readme"

[tool.setuptools.packages.find]
where = [".."]
include = ["incident_forge*"]
